--- a/twitch.html
+++ b/twitch.html
@@ -23,7 +23,7 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="inicio.html">Inicio</a></li>
+			<li><a href="index.html">Inicio</a></li>
 			<li><a href="discord.html">Discord</a></li>
 			<li><a href="youtube.html">YouTube</a></li>
 			<li><a href="twitch.html">Twitch</a></li>
