--- a/discord.html
+++ b/discord.html
@@ -18,18 +18,16 @@
 </head>
 
 <body>
-	<header>
-		<h1>ESPS</h1>
-	</header>
-	<nav>
-		<ul>
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="discord.html">Discord</a></li>
-			<li><a href="youtube.html">YouTube</a></li>
-			<li><a href="twitch.html">Twitch</a></li>
-			<li><a href="calendario.html">Calendario</a></li>
-			<li><a href="contacto.html">Contacto</a></li>
-		</ul>
+	<nav class="navbar navbar-expand-xl navbar-dark bg-dark">
+		<div class="collapse navbar-collapse">
+			<ul class="navbar-nav mx-auto">
+				<li class="nav-item active mx-5"><a class="nav-link" href="index.html">Inicio</a></li>
+				<li class="nav-item mx-5"><a class="nav-link" href="discord.html">Discord</a></li>
+				<li class="nav-item mx-5"><a class="nav-link" href="media.html">Media</a></li>
+				<li class="nav-item mx-5"><a class="nav-link" href="calendario.html">Calendario</a></li>
+				<li class="nav-item mx-5"><a class="nav-link" href="miembros.html">Miembros</a></li>
+			</ul>
+		</div>
 	</nav>
 	<section>
 		<h2>Discord</h2>
