--- a/index.html
+++ b/index.html
@@ -18,69 +18,91 @@
 </head>
 
 <body>
-	<header>
-		<h1>ESPS</h1>
-	</header>
-	<nav>
-		<ul>
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="discord.html">Discord</a></li>
-			<li><a href="youtube.html">YouTube</a></li>
-			<li><a href="twitch.html">Twitch</a></li>
-			<li><a href="calendario.html">Calendario</a></li>
-			<li><a href="contacto.html">Contacto</a></li>
-		</ul>
+	<nav class="navbar navbar-expand-xl navbar-dark bg-dark">
+		<div class="collapse navbar-collapse">
+			<ul class="navbar-nav mx-auto">
+				<li class="nav-item active mx-5"><a class="nav-link" href="index.html">Inicio</a></li>
+				<li class="nav-item mx-5"><a class="nav-link" href="discord.html">Discord</a></li>
+				<li class="nav-item mx-5"><a class="nav-link" href="media.html">Media</a></li>
+				<li class="nav-item mx-5"><a class="nav-link" href="calendario.html">Calendario</a></li>
+				<li class="nav-item mx-5"><a class="nav-link" href="miembros.html">Miembros</a></li>
+			</ul>
+		</div>
 	</nav>
-	<section>
-		<h2>¿Quiénes somos?</h2>
-		<p>
-			ESPS es un equipo de Squad fundado en 2016 con el objetivo de competir en torneos. Nuestras siglas significan ESPañoles en Squad.
-			Somos un grupo formado por más de 700 miembros, de los cuales siempre suele haber unos 150 activos que participan tanto en partidas públicas día a día,
-			como en torneos competitivos de Squad. En ESPS eres bienvenido incluso si eres un novato de Squad.
-			Nuestros compañeros estarán más que encantados de ayudarte con cualquier duda que tengas.
-		</p>
-		<img src="" alt="">
-	</section>
-	<section>
-		<h2>Squad competitivo</h2>
-		<p>
-			Nuestro equipo competitivo participa en competiciones al más alto nivel, enfrentándose a los mejores equipos de Squad.
-			Por este motivo, jugamos siempre con una metalidad competitiva orientada a la victoria.
-			En ESPS no encontrarás roleo ni simulación militar, ya que estos aspectos no tienen cabida en el competitivo.
-			Lo que encontrarás es eficiencia, eficacia, velocidad, un conocimiento profundo de las mecánicas del juego, competitividad y predisposición a mejorar.
-		</p>
-		<img src="" alt="">
-	</section>
-	<section>
-		<h2>Comunidad</h2>
-		<p>
-			A pesar de ser un equipo competitivo, en nuestro grupo encontrarás a gente jugando todos los días.
-			Una de las ventajas de ser el grupo más grande de Squad en español es que siempre hay alguien disponible.
-			Además, los fines de semana suele juntarse mucha gente y no es raro vernos llenar servidores.
-		</p>
-		<img src="" alt="">
-	</section>
-	<section>
-		<h2>¿Cómo puedo unirme?</h2>
-		<p>
-			Para poder jugar con ESPS sólo tienes que entrar en nuestro <a href="https://discord.gg/P3dftrB">Discord</a>.
-			Un bot se pondrá en contacto contigo para asegurarse de que has leído las normas y darte la bienvenida.
-			Una vez dentro, podrás jugar con los miembros de ESPS en partidas públicas.
-			Si muestras interés por el competitivo, serás reclutado y podrás formar parte del equipo en diversos torneos.
-		</p>
-		<img src="" alt="">
-	</section>
-	<section>
-		<h2>Normas</h2>
-		<p>
-			La norma principal es el respeto tanto hacia los compañeros como hacia los adversarios.
-			El respeto es esencial y por eso no permitimos ningún tipo de mensaje político que pueda llevar a enfrentamientos.
-			Este es un lugar para jugar a Squad.
-			Los miembros del equipo competitivo no pueden pertenecer a otros equipos de Squad.
-			A los miembros de la comunidad les pedimos que se involucren y participen activamente para mantener la actividad y el buen ambiente que nos caracterizan.
-		</p>
-		<img src="" alt="">
-	</section>
+	<div class="row bg-dark text-light">
+		<div class="col-md-8 mx-auto mt-5">
+			<div class="row">
+				<div class="col-md-7">
+					<h2>¿Quiénes somos?</h2>
+					<p>
+						ESPS es un equipo de Squad fundado en 2016 con el objetivo de competir en torneos. Nuestras siglas significan ESPañoles en Squad.
+						Somos un grupo formado por más de 700 miembros, de los cuales siempre suele haber unos 150 activos que participan tanto en partidas públicas día a día,
+						como en torneos competitivos de Squad. En ESPS eres bienvenido incluso si eres un novato de Squad.
+						Nuestros compañeros estarán más que encantados de ayudarte con cualquier duda que tengas.
+					</p>
+				</div>
+				<div class="col-md-5">
+					<img class="img-fluid" src="img/t72vswarrior.jpg" alt="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-5">
+					<img class="img-fluid" src="img/t72vswarrior.jpg" alt="">
+				</div>
+				<div class="col-md-7">
+					<h2>Squad competitivo</h2>
+					<p>
+						Nuestro equipo competitivo participa en competiciones al más alto nivel, enfrentándose a los mejores equipos de Squad.
+						Por este motivo, jugamos siempre con una metalidad competitiva orientada a la victoria.
+						En ESPS no encontrarás roleo ni simulación militar, ya que estos aspectos no tienen cabida en el competitivo.
+						Lo que encontrarás es eficiencia, eficacia, velocidad, un conocimiento profundo de las mecánicas del juego, competitividad y predisposición a mejorar.
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-7">
+					<h2>Comunidad</h2>
+					<p>
+						A pesar de ser un equipo competitivo, en nuestro grupo encontrarás a gente jugando todos los días.
+						Una de las ventajas de ser el grupo más grande de Squad en español es que siempre hay alguien disponible.
+						Además, los fines de semana suele juntarse mucha gente y no es raro vernos llenar servidores.
+					</p>
+				</div>
+				<div class="col-md-5">
+					<img class="img-fluid" src="img/t72vswarrior.jpg" alt="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-5">
+					<img class="img-fluid" src="img/t72vswarrior.jpg" alt="">
+				</div>
+				<div class="col-md-7">
+					<h2>¿Cómo puedo unirme?</h2>
+					<p>
+						Para poder jugar con ESPS sólo tienes que entrar en nuestro <a href="https://discord.gg/P3dftrB">Discord</a>.
+						Un bot se pondrá en contacto contigo para asegurarse de que has leído las normas y darte la bienvenida.
+						Una vez dentro, podrás jugar con los miembros de ESPS en partidas públicas.
+						Si muestras interés por el competitivo, serás reclutado y podrás formar parte del equipo en diversos torneos.
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-7">
+					<h2>Normas</h2>
+					<p>
+						La norma principal es el respeto tanto hacia los compañeros como hacia los adversarios.
+						El respeto es esencial y por eso no permitimos ningún tipo de mensaje político que pueda llevar a enfrentamientos.
+						Este es un lugar para jugar a Squad.
+						Los miembros del equipo competitivo no pueden pertenecer a otros equipos de Squad.
+						A los miembros de la comunidad les pedimos que se involucren y participen activamente para mantener la actividad y el buen ambiente que nos caracterizan.
+					</p>
+				</div>
+				<div class="col-md-5">
+					<img class="img-fluid" src="img/t72vswarrior.jpg" alt="">
+				</div>
+			</div>
+		</div>
+	</div>
 	<footer>
 		<ul>
 			<li><a href="#">Aviso Legal</a></li>
